  distribution choice, and minimum sample size.
- new parameters "conflict/usegenres", "conflict/reduction", "conflict/mbreduction", "conflict/maxvarsfracres", "conflict/resfuiplevels",
  "conflict/fixandcontinue", and "conflict/maxcoefquot" to control generalized resolution conflict analysis.

### Data structures

- added structs SCIP_IISFINDER, SCIP_IISFINDERDATA, SCIP_IIS
- added struct SCIP_DATATREE to model generic serializable data; new enum SCIP_DATATREE_VALUETYPE

Deleted files
-------------

Testing
-------

Build system
------------

- changed the default for TPI to tny

### Makefile

- revised SANITIZE options: removed SANITIZE=full, added SANITIZE=thread, SANITIZE=address, and SANITIZE=memory to enable
  thread, address, and memory sanitizers, respectively, in addition to undefined behavior sanitizer;
  changed default to SANITIZE=false
- added build flag MPFR (default: false) to link with the multiprecision floating-point library, needed when SoPlex is also
  built with MPFR=true for precision boosting in rational solving mode
- the symlink $(LIBDIR)/include/papilo should now point to the `src` subdirectory of a PaPILO repository or the headers directory
  of a PaPILO installation without TBB; pointing to the directory of a PaPILO repository still works, but is deprecated
- removed option to link TBB library, as this is not used by default when PaPILO has not been built via cmake
  (use USRCXXFLAGS=-DPAPILO_TBB USRLDFLAGS=-ltbb to enable TBB for PaPILO)
- enabled link-time-optimization for OPT=opt builds on Linux and macOS with gcc and clang, use LTO=false to disable

### Cmake

- increased minimal required cmake version to 3.11
- removed automatic download and build of Bliss during cmake configuration when -DSYM=(s)bliss;
  please build and install from https://github.com/scipopt/bliss before and specify -DBLISS_DIR
- replaced `SANITIZE_XYZ=(on|off)` options by `SANITIZE=(on|off|thread|address|memory)`;