@@ -240,6 +240,7 @@ Interface changes
   distribution choice, and minimum sample size.
 - new parameters "conflict/usegenres", "conflict/reduction", "conflict/mbreduction", "conflict/maxvarsfracres", "conflict/resfuiplevels",
   "conflict/fixandcontinue", and "conflict/maxcoefquot" to control generalized resolution conflict analysis.
+- new parameter "lp/minsolvedepth" to give a lower bound on the depth at which LPs are solved
 
 ### Data structures
 
